Changelog
=========

1.0b1 - Unreleased
-------------------

* Add ``theme.xml`` import step (see README).
  [optilude]

* Add support for ``[theme:parameters]`` section in ``manifest.cfg``, which
  can be used to set parameters and the corresponding TALES expressions to
  calculate them.
  [optilude]

* Add support for parameter expressions based on TALES expressions
  [optilude]

* Use plone.subrequest 1.6 features to work with IStreamIterator from
  plone.resource.
  [elro]

* Depend on ``Products.CMFPlone`` instead of ``Plone``.
  [elro]

* Added support for uploading themes as Zip archives.
  [optilude]

* Added theme off switch: Add a query string parameter ``diazo.off=1`` to a
  request whilst Zope is in development mode to turn off the theme.
  [optilude]

* Removed 'theme' and alternative themes support: Themes should be referenced
  using the ``<theme />`` directive in the Diazo rules file.
  [optilude]

* Removed 'domains' support: This can be handled with the rules file syntax
  by using the ``host`` parameter.
  [optilude]
  
* Removed 'notheme' support: This can be handled within the rules file syntax
  by using the ``path`` parameter.
  [optilude]
  
* Added ``path`` and ``host`` as parameters to the Diazo rules file. These
  can now be used as conditional expressions.
  [optilude]
  
* Removed dependency on XDV in favour of dependency on Diazo (which is the
  new name for XDV).
  [optilude]
  
* Forked from collective.xdv 1.0rc11.
  [optilude]